--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,14 @@ before_install:
 script:
    - docker run -e CI=true syed/docker-react npm run test
    
+deploy:
+   provider: elasticbeanstalk
+   region: "ap-southeast-2"
+   app: "frontend"
+   env: "frontend-env"
+   bucket_name: "elasticbeanstalk-ap-southeast-2-471112674323"
+   bucket_path: "frontend"
+   on:
+      branch: master
+   access_key_id: "$AWS_ACCESS_KEY"
+   secret_access_key: "$AWS_SECRET_KEY"
