--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ deploy:
    bucket_name: "elasticbeanstalk-ap-southeast-2-471112674323"
    bucket_path: "frontend"
    on:
-      branch: master
+      branch: main
    access_key_id: "$AWS_ACCESS_KEY"
    secret_access_key: "$AWS_SECRET_KEY"
